--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,10 +4,10 @@
 
 @layer components {
   .infoText {
-    @apply block max-w-[300px] rounded bg-my-black-light p-4 hover:bg-my-black-dark;
+    @apply max-w-[300px] rounded-lg bg-my-black-light p-4 hover:bg-my-black-dark;
   }
 
-  .chatRow {
+  /* .chatRow {
     @apply flex w-full cursor-pointer items-center justify-center space-x-2 rounded-lg px-5 py-3 text-sm text-gray-300 transition-all duration-200 ease-out hover:bg-my-black-light;
-  }
+  } */
 }
