--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
     @apply max-w-[300px] rounded-lg bg-my-black-light p-4 hover:bg-my-black-dark;
   }
 
-  /* .chatRow {
-    @apply flex w-full cursor-pointer items-center justify-center space-x-2 rounded-lg px-5 py-3 text-sm text-gray-300 transition-all duration-200 ease-out hover:bg-my-black-light;
-  } */
+  .chatRow {
+    @apply rounded-lg px-5 py-3 text-sm flex items-center justify-center space-x-2 hover:bg-gray-700/70 cursor-pointer text-gray-300 transition-all duration-200 ease-out;
+  }
 }
